--- a/style.css
+++ b/style.css
@@ -5,6 +5,18 @@
     text-align: center;
 }
 
+h1 {
+    margin-top: 40px;
+}
+
+#timerDiv {
+    margin-top: 100px;
+    display: flex;
+    gap: 150px;
+    text-align: center;
+    justify-content: center;
+}
+
 #container {
     margin: 100px;
 }
@@ -15,6 +27,13 @@ form {
     text-align: center;
 }
 
-#word, #score {
+#word {
     padding: 10px;
+    font-size: 24px;
+}
+
+select {
+    padding: 10px;
+    font-size: 20px;
+    border: none;
 }
