--- a/style.css
+++ b/style.css
@@ -5,20 +5,26 @@
     text-align: center;
 }
 
+body {
+    background-color: #323437;
+    color: rgb(238, 235, 235);
+}
+
 h1 {
     margin-top: 40px;
 }
 
 #timerDiv {
-    margin-top: 100px;
+    margin-top: 70px;
     display: flex;
     gap: 150px;
     text-align: center;
     justify-content: center;
+    font-size: 18px;
 }
 
 #container {
-    margin: 100px;
+    margin: 70px;
 }
 
 form {
@@ -27,13 +33,33 @@ form {
     text-align: center;
 }
 
+form > input {
+    outline: none;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background-color: aliceblue;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+}
+
 #word {
     padding: 10px;
-    font-size: 24px;
+    font-size: 28px;
 }
 
 select {
-    padding: 10px;
-    font-size: 20px;
+    position: absolute;
+    display: inline;
+    padding: 2px;
+    border-radius: 3px;
     border: none;
+}
+
+#restartBtn {
+    padding: 10px;
+    border-style: none;
+    border-radius: 5px;
+    font-weight: bold;
 }
