--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
     margin: 0;
     text-align: center;
@@ -21,6 +21,8 @@ h1 {
     text-align: center;
     justify-content: center;
     font-size: 18px;
+    color: #e2b714;
+    font-weight: bold;
 }
 
 #container {
@@ -55,6 +57,10 @@ select {
     padding: 2px;
     border-radius: 3px;
     border: none;
+    background-color: #45494e;
+    color: #e2b714;
+    font-weight: bold;
+    font-size: large;
 }
 
 #restartBtn {
